# ai-cli

./: .gitignore  Cargo.toml  readme.md  sample.aicli.conf
src/: alpha_vantage.rs  chat.rs  command.rs  config.rs  email.rs  file_edit.rs  http.rs  main.rs  patch.rs  sandbox.rs  scrape.rs  search.rs  shell.rs  similarity.rs  spinner.rs  tools.rs  tui.rs  utils.rs
src/tui/: event.rs  llm.rs  mod.rs  render.rs  theme.rs  tools.rs  types.rs
