[package]
name = "ai-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenv = "0.15"
reqwest = { version = "0.12", features = ["json", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
colored = "2.1"
termimad = "0.30"
ctrlc = "3.4"
chrono = "0.4.38"
scraper = "0.19"
urlencoding = "2.1.3"
build-time = "0.1"
regex = "1.10"
dirs = "5.0.1"
lettre = { version = "0.11.10", features = ["smtp-transport", "builder", "native-tls"] }
clap = { version = "4.5", features = ["derive"] }
difference = "2.0"
libc = "0.2.158"
pty = "0.2"
rustyline = "17.0"

[profile.dev]
debug = false
strip = "debuginfo"
codegen-units = 1
lto = "fat"
incremental = true

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true