[package]
name = "ai-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenv = "0.15"
reqwest = { version = "0.12", features = ["json", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
colored = "2.1"
termimad = "0.30"
ctrlc = "3.4"
chrono = "0.4.38"
scraper = "0.19"
urlencoding = "2.1.3"
build-time = "0.1"
regex = "1.10"
dirs = "5.0.1"
lettre = { version = "0.11.10", features = ["smtp-transport", "builder", "native-tls", "tokio1-native-tls"] }
clap = { version = "4.5", features = ["derive"] }
difference = "2.0"
libc = "0.2.158"
pty = "0.2"
rustyline = "17.0"
spinners = "4.1"
crossterm = "0.27"
anyhow = "1.0"
dunce = "1.0"
sysinfo = "0.30"
which = "6.0"
portable-pty = "0.8"
expectrl = "0.7"
 readability = "0.3"
 diffy = "0.4"
 dialoguer = "0.11"
 strsim = "0.11"
 config = "0.14"
 log = "0.4"
 env_logger = "0.10"
# candle-core = "0.6"  # Uncomment if using embeddings
# candle-nn = "0.6"    # Uncomment if using embeddings
# candle-transformers = "0.6"  # Uncomment if using embeddings
 textdistance = "1.1"  # Keep temporarily for transition
 patchkit = "0.1"  # Keep temporarily for transition
 duct = "0.13"
 shell-words = "1.1"
 patch-apply = "0.8"
   rayon = "1.8"
   async-openai = "0.24"
   tokio = { version = "1.0", features = ["full"] }
   tavily = "1.0.1"

[profile.dev]
debug = false
strip = "debuginfo"
codegen-units = 1
lto = "fat"
incremental = true

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true